- Add `BatteryInfo.BatterySaverEnabled` since we're not reliant on the old WinForms interface anymore.

--- a/docs/Test-ADTBattery.mdx
+++ b/docs/Test-ADTBattery.mdx
@@ -47,6 +47,7 @@ Outputs an object containing the following properties:
 - ACPowerLineStatus
 - BatteryChargeStatus
 - BatteryLifePercent
+- BatterySaverEnabled
 - BatteryLifeRemaining
 - BatteryFullLifetime
 - IsUsingACPower
@@ -81,6 +82,7 @@ This cmdlet supports the common parameters: -Debug, -ErrorAction, -ErrorVariable
 ### - ACPowerLineStatus
 ### - BatteryChargeStatus
 ### - BatteryLifePercent
+### - BatterySaverEnabled
 ### - BatteryLifeRemaining
 ### - BatteryFullLifetime
 ### - IsUsingACPower
