- Update markdown help exports following nullable changes.

--- a/docs/Convert-ADTRegistryPath.mdx
+++ b/docs/Convert-ADTRegistryPath.mdx
@@ -72,7 +72,7 @@ Aliases:
 
 Required: False
 Position: 2
-Default value: None
+Default value: [System.Management.Automation.Language.NullString]::Value
 Accept pipeline input: False
 Accept wildcard characters: False
 ```
