--- a/docs/Get-ADTBoundParametersAndDefaultValues.mdx
+++ b/docs/Get-ADTBoundParametersAndDefaultValues.mdx
@@ -59,7 +59,7 @@ Aliases:
 
 Required: False
 Position: 2
-Default value: None
+Default value: [System.Management.Automation.Language.NullString]::Value
 Accept pipeline input: False
 Accept wildcard characters: False
 ```
@@ -75,7 +75,7 @@ Aliases:
 
 Required: False
 Position: 3
-Default value: None
+Default value: [System.Management.Automation.Language.NullString]::Value
 Accept pipeline input: False
 Accept wildcard characters: False
 ```
