--- a/docs/New-ADTErrorRecord.mdx
+++ b/docs/New-ADTErrorRecord.mdx
@@ -114,7 +114,7 @@ Aliases:
 
 Required: False
 Position: 5
-Default value: None
+Default value: [System.Management.Automation.Language.NullString]::Value
 Accept pipeline input: False
 Accept wildcard characters: False
 ```
@@ -130,7 +130,7 @@ Aliases:
 
 Required: False
 Position: 6
-Default value: None
+Default value: [System.Management.Automation.Language.NullString]::Value
 Accept pipeline input: False
 Accept wildcard characters: False
 ```
@@ -146,7 +146,7 @@ Aliases:
 
 Required: False
 Position: 7
-Default value: None
+Default value: [System.Management.Automation.Language.NullString]::Value
 Accept pipeline input: False
 Accept wildcard characters: False
 ```
@@ -162,7 +162,7 @@ Aliases:
 
 Required: False
 Position: 8
-Default value: None
+Default value: [System.Management.Automation.Language.NullString]::Value
 Accept pipeline input: False
 Accept wildcard characters: False
 ```
