--- a/docs/Open-ADTSession.mdx
+++ b/docs/Open-ADTSession.mdx
@@ -155,7 +155,7 @@ Aliases:
 
 Required: False
 Position: 4
-Default value: None
+Default value: [System.Management.Automation.Language.NullString]::Value
 Accept pipeline input: False
 Accept wildcard characters: False
 ```
@@ -171,7 +171,7 @@ Aliases:
 
 Required: False
 Position: 5
-Default value: None
+Default value: [System.Management.Automation.Language.NullString]::Value
 Accept pipeline input: False
 Accept wildcard characters: False
 ```
@@ -187,7 +187,7 @@ Aliases:
 
 Required: False
 Position: 6
-Default value: None
+Default value: [System.Management.Automation.Language.NullString]::Value
 Accept pipeline input: False
 Accept wildcard characters: False
 ```
@@ -203,7 +203,7 @@ Aliases:
 
 Required: False
 Position: 7
-Default value: None
+Default value: [System.Management.Automation.Language.NullString]::Value
 Accept pipeline input: False
 Accept wildcard characters: False
 ```
@@ -219,7 +219,7 @@ Aliases:
 
 Required: False
 Position: 8
-Default value: None
+Default value: [System.Management.Automation.Language.NullString]::Value
 Accept pipeline input: False
 Accept wildcard characters: False
 ```
@@ -235,7 +235,7 @@ Aliases:
 
 Required: False
 Position: 9
-Default value: None
+Default value: [System.Management.Automation.Language.NullString]::Value
 Accept pipeline input: False
 Accept wildcard characters: False
 ```
@@ -283,7 +283,7 @@ Aliases:
 
 Required: False
 Position: 12
-Default value: None
+Default value: [System.Management.Automation.Language.NullString]::Value
 Accept pipeline input: False
 Accept wildcard characters: False
 ```
@@ -299,7 +299,7 @@ Aliases:
 
 Required: False
 Position: 13
-Default value: None
+Default value: [System.Management.Automation.Language.NullString]::Value
 Accept pipeline input: False
 Accept wildcard characters: False
 ```
@@ -315,7 +315,7 @@ Aliases:
 
 Required: False
 Position: 14
-Default value: None
+Default value: [System.Management.Automation.Language.NullString]::Value
 Accept pipeline input: False
 Accept wildcard characters: False
 ```
@@ -331,7 +331,7 @@ Aliases:
 
 Required: False
 Position: 15
-Default value: None
+Default value: [System.Management.Automation.Language.NullString]::Value
 Accept pipeline input: False
 Accept wildcard characters: False
 ```
@@ -459,7 +459,7 @@ Aliases:
 
 Required: False
 Position: 23
-Default value: None
+Default value: [System.Management.Automation.Language.NullString]::Value
 Accept pipeline input: False
 Accept wildcard characters: False
 ```
@@ -475,7 +475,7 @@ Aliases:
 
 Required: False
 Position: 24
-Default value: None
+Default value: [System.Management.Automation.Language.NullString]::Value
 Accept pipeline input: False
 Accept wildcard characters: False
 ```
@@ -491,7 +491,7 @@ Aliases:
 
 Required: False
 Position: 25
-Default value: None
+Default value: [System.Management.Automation.Language.NullString]::Value
 Accept pipeline input: False
 Accept wildcard characters: False
 ```
@@ -507,7 +507,7 @@ Aliases:
 
 Required: False
 Position: 26
-Default value: None
+Default value: [System.Management.Automation.Language.NullString]::Value
 Accept pipeline input: False
 Accept wildcard characters: False
 ```
@@ -555,7 +555,7 @@ Aliases:
 
 Required: False
 Position: 28
-Default value: None
+Default value: [System.Management.Automation.Language.NullString]::Value
 Accept pipeline input: False
 Accept wildcard characters: False
 ```
