--- a/docs/Show-ADTInstallationProgress.mdx
+++ b/docs/Show-ADTInstallationProgress.mdx
@@ -73,7 +73,7 @@ Aliases:
 
 Required: False
 Position: 1
-Default value: None
+Default value: [System.Management.Automation.Language.NullString]::Value
 Accept pipeline input: False
 Accept wildcard characters: False
 ```
@@ -90,7 +90,7 @@ Aliases:
 
 Required: False
 Position: 2
-Default value: None
+Default value: [System.Management.Automation.Language.NullString]::Value
 Accept pipeline input: False
 Accept wildcard characters: False
 ```
@@ -107,7 +107,7 @@ Aliases:
 
 Required: False
 Position: 3
-Default value: 0
+Default value: None
 Accept pipeline input: False
 Accept wildcard characters: False
 ```
