--- a/docs/Start-ADTMsiProcess.mdx
+++ b/docs/Start-ADTMsiProcess.mdx
@@ -129,7 +129,7 @@ Aliases:
 
 Required: True
 Position: Named
-Default value: None
+Default value: [System.Management.Automation.Language.NullString]::Value
 Accept pipeline input: True (ByValue)
 Accept wildcard characters: False
 ```
@@ -259,7 +259,7 @@ Aliases:
 
 Required: False
 Position: Named
-Default value: None
+Default value: [System.Management.Automation.Language.NullString]::Value
 Accept pipeline input: False
 Accept wildcard characters: False
 ```
@@ -279,7 +279,7 @@ Aliases:
 
 Required: False
 Position: Named
-Default value: None
+Default value: [System.Management.Automation.Language.NullString]::Value
 Accept pipeline input: False
 Accept wildcard characters: False
 ```
@@ -296,7 +296,7 @@ Aliases:
 
 Required: False
 Position: Named
-Default value: None
+Default value: [System.Management.Automation.Language.NullString]::Value
 Accept pipeline input: False
 Accept wildcard characters: False
 ```
