--- a/docs/Uninstall-ADTApplication.mdx
+++ b/docs/Uninstall-ADTApplication.mdx
@@ -192,7 +192,7 @@ Aliases:
 
 Required: False
 Position: Named
-Default value: None
+Default value: [System.Management.Automation.Language.NullString]::Value
 Accept pipeline input: False
 Accept wildcard characters: False
 ```
@@ -208,7 +208,7 @@ Aliases:
 
 Required: False
 Position: Named
-Default value: None
+Default value: [System.Management.Automation.Language.NullString]::Value
 Accept pipeline input: False
 Accept wildcard characters: False
 ```
@@ -241,7 +241,7 @@ Aliases:
 
 Required: False
 Position: Named
-Default value: None
+Default value: [System.Management.Automation.Language.NullString]::Value
 Accept pipeline input: False
 Accept wildcard characters: False
 ```
@@ -261,7 +261,7 @@ Aliases:
 
 Required: False
 Position: Named
-Default value: None
+Default value: [System.Management.Automation.Language.NullString]::Value
 Accept pipeline input: False
 Accept wildcard characters: False
 ```
