--- a/docs/Get-ADTMsiExitCodeMessage.mdx
+++ b/docs/Get-ADTMsiExitCodeMessage.mdx
@@ -40,7 +40,7 @@ Aliases:
 
 Required: True
 Position: 1
-Default value: 0
+Default value: None
 Accept pipeline input: False
 Accept wildcard characters: False
 ```
