--- a/docs/Mount-ADTWimFile.mdx
+++ b/docs/Mount-ADTWimFile.mdx
@@ -103,7 +103,7 @@ Aliases:
 
 Required: True
 Position: Named
-Default value: 0
+Default value: None
 Accept pipeline input: False
 Accept wildcard characters: False
 ```
