--- a/docs/New-ADTZipFile.mdx
+++ b/docs/New-ADTZipFile.mdx
@@ -99,7 +99,7 @@ Aliases:
 
 Required: False
 Position: Named
-Default value: None
+Default value: [System.Management.Automation.Language.NullString]::Value
 Accept pipeline input: False
 Accept wildcard characters: False
 ```
