--- a/docs/Remove-ADTRegistryKey.mdx
+++ b/docs/Remove-ADTRegistryKey.mdx
@@ -102,7 +102,7 @@ Aliases:
 
 Required: False
 Position: Named
-Default value: None
+Default value: [System.Management.Automation.Language.NullString]::Value
 Accept pipeline input: False
 Accept wildcard characters: False
 ```
