--- a/docs/Set-ADTDeferHistory.mdx
+++ b/docs/Set-ADTDeferHistory.mdx
@@ -41,7 +41,7 @@ Aliases:
 
 Required: False
 Position: 1
-Default value: 0
+Default value: None
 Accept pipeline input: False
 Accept wildcard characters: False
 ```
