--- a/docs/Start-ADTProcessAsUser.mdx
+++ b/docs/Start-ADTProcessAsUser.mdx
@@ -195,7 +195,7 @@ Aliases:
 
 Required: True
 Position: Named
-Default value: None
+Default value: [System.Management.Automation.Language.NullString]::Value
 Accept pipeline input: False
 Accept wildcard characters: False
 ```
@@ -245,7 +245,7 @@ Aliases:
 
 Required: False
 Position: Named
-Default value: None
+Default value: [System.Management.Automation.Language.NullString]::Value
 Accept pipeline input: False
 Accept wildcard characters: False
 ```
