--- a/docs/Test-ADTRegistryValue.mdx
+++ b/docs/Test-ADTRegistryValue.mdx
@@ -78,7 +78,7 @@ Aliases:
 
 Required: False
 Position: 3
-Default value: None
+Default value: [System.Management.Automation.Language.NullString]::Value
 Accept pipeline input: False
 Accept wildcard characters: False
 ```
