--- a/docs/Write-ADTLogEntry.mdx
+++ b/docs/Write-ADTLogEntry.mdx
@@ -88,7 +88,7 @@ Aliases:
 
 Required: False
 Position: 3
-Default value: None
+Default value: [System.Management.Automation.Language.NullString]::Value
 Accept pipeline input: False
 Accept wildcard characters: False
 ```
@@ -104,7 +104,7 @@ Aliases:
 
 Required: False
 Position: 4
-Default value: None
+Default value: [System.Management.Automation.Language.NullString]::Value
 Accept pipeline input: False
 Accept wildcard characters: False
 ```
@@ -137,7 +137,7 @@ Aliases:
 
 Required: False
 Position: 6
-Default value: None
+Default value: [System.Management.Automation.Language.NullString]::Value
 Accept pipeline input: False
 Accept wildcard characters: False
 ```
@@ -153,7 +153,7 @@ Aliases:
 
 Required: False
 Position: 7
-Default value: None
+Default value: [System.Management.Automation.Language.NullString]::Value
 Accept pipeline input: False
 Accept wildcard characters: False
 ```
